Added rotation preference and adjusted dock height and padding in landscape for 360p
Change-Id: I9c145335d874dc789235fdd37136386ba0476f7a

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -343,5 +343,6 @@ s -->
     <string name="preferences_interface_dock_divider_summary">Show divider between homescreen and dock</string>
 
     <!-- Other preferences -->
+    <string name="preferences_interface_general_orientation_title">Auto-rotate screen</string>
     <string name="preferences_restart_launcher">Restart launcher</string>
 </resources>
