--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -286,7 +286,7 @@ s -->
 
     <!-- Homescreen -->
     <string name="preferences_interface_homescreen_title">Homescreen</string>
-    <string name="preferences_interface_homescreen_summary">Screens and wallpaper</string>
+    <string name="preferences_interface_homescreen_summary">Screens and grid</string>
     <string name="preferences_interface_homescreen_general_category">General</string>
     <string name="preferences_interface_homescreen_general_grid_title">Grid size</string>
     <string name="preferences_interface_homescreen_general_grid_summary">Choose the number of rows/columns on the homescreen</string>
