--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -122,6 +122,8 @@ s -->
     <string name="delete_target_uninstall_label">Uninstall</string>
     <!-- Label for the info icon. [CHAR_LIMIT=30] -->
     <string name="info_target_label">App info</string>
+    <!-- Label for the info icon. [CHAR_LIMIT=30] -->
+    <string name="edit_target_label">Edit</string>
 
     <!-- Accessibility: Search button -->
     <string name="accessibility_search_button">Search</string>
@@ -345,4 +347,9 @@ s -->
     <string name="preferences_interface_general_orientation_title">Auto-rotate screen</string>
     <string name="preferences_pinch_expanded_title">Pinch to enable expanded desktop</string>
     <string name="preferences_restart_launcher">Restart launcher</string>
+    <string name="preferences_interface_general_iconpack_title">Icon pack</string>
+    <string name="preferences_interface_general_iconpack_summary">Icon packs replace the default application icon</string>
+    <string name="dialog_pick_iconpack_title">Pick icon pack</string>
+    <string name="default_iconpack_title">Default</string>
+    <string name="no_iconpacks_summary">No icon packs installed</string>
 </resources>
